feat(site): add history and recovery operations
